# TaskScheduler

./: CMakeLists.txt  README.md
lib/: FutureResult.hpp  MyStdAny.hpp  Proxy.hpp  Result.hpp  TaskScheduler.hpp
tests/: CMakeLists.txt  TaskSchedulerTests.cpp  TestType.hpp
