include(FetchContent)

FetchContent_Declare(
  googletest
  GIT_REPOSITORY https://github.com/google/googletest.git
  GIT_TAG release-1.12.1
)

# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

enable_testing()

add_executable(
  TaskSchedulerTests
  TaskSchedulerTests.cpp
)

target_link_libraries(
  TaskSchedulerTests
  GTest::gtest_main
)

include_directories(../lib)
target_include_directories(TaskSchedulerTests PUBLIC ${PROJECT_SOURCE_DIR})

include(GoogleTest)

gtest_discover_tests(TaskSchedulerTests)